Atualização do código e organização

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ body{
 }
 
 .header-menu a, a:link, a:visited{
-    text-decoration: none;
+    /* text-decoration: none; */
     color: #fff;
     padding: 10px 15px;
 }
